ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: appointment
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: appointment.sample
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: web
            port: 
              name: http
